[package]
name = "fetch"
version = "0.0.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.28.2", default-features = false }
time = { version = "0.3.20", default-features = false }
ubyte = { version = "0.10.3", default-features = false }
yansi = { version = "0.5.1", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
